<resources>
    <string name="app_name">Controles</string>
    <string name="txt_title">Datos</string>
    <string name="txt_horario">Horario</string>
    <string name="txt_horario_completo">Completo</string>
    <string name="txt_horario_medio_tiempo">Medio tiempo</string>
    <string name="txt_btn_guardar">Guardar</string>
    <string name="hint_name">Introduce tu nombre</string>
    <string name="hint_email">Introduce tu email</string>
    <string name="hint_domicilio">Introduce tu domicilio</string>
</resources>